--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "json-server": "^0.17.0",
     "node-sass": "^4.14.1",
     "node-scss": "^7.0.3",
     "react": "^17.0.2",
@@ -22,7 +24,9 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "sass": "^1.45.2",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +55,7 @@
   },
   "devDependencies": {
     "eslint": "^7.11.0",
+    "gh-pages": "^3.2.3",
     "prettier": "2.1.2"
   }
 }
